Commit after follow-up draft 1

--- a/thesis_skel/thesis_DGH.tex
+++ b/thesis_skel/thesis_DGH.tex
@@ -116,7 +116,7 @@ Assuming constant exposure and flux in each energy bin the differential limit ca
   Approx. \, Differential \,limit \, (i^{th} \, E_{\nu} \, bin)  = \frac{N_{Up}}{E^{-1}_{\nu} \cdot \xi(E_{\nu}) \cdot ln(10) \cdot \Delta (log_{10}(E_{\nu}))}
 \end{equation}These limIts provide a way to denote the sensitivity of the detector for different energies. As it can be seen from the fig.~\ref{} for the Down-going Low analysis the Pierre AUger Observatory is the most sensitive for energies ~ 1 EeV. 
 
-
+Both limits are also compared to the results from the previous analysis in fig~\ref{}. As it was seen in the exposure comparison it is clear that the new triggers help improve the sensitivity at lower energies. For higher energies the improvements to the upper-limit for the diffuse flux of $UHE_{\nu s}$ is not that significant. The integral flux limit sees an improvement ~1 order of magnitude. The aim of this study was to evaluate the improvement but it was always know that for this angular range significant improvements to the diffuse flux improvements were not expected. The diffuse flux limit and sensitivity for AUger is dominated by the Earth-skimming channel as shown in ~\cite{}. This limit is significantly lower than the DGL channel and is the main driver to constrain astrophysical and cosmogenic models. However, the improvements shown in this analysis are more important in the context of point source searches. This is discussed more in the next chapter. 
 
 
 
