Text first draft before edit

--- a/thesis_skel/thesis_conclusion.tex
+++ b/thesis_skel/thesis_conclusion.tex
@@ -11,19 +11,23 @@
 \label{fig:red_chi2_4}
 \end{figure}
 
-\section*{Alignment}
-During the course of this thesis a successful positional and angular alignment was performed for run 3211 using the Millepede alignment tool. As it is evident from fig.(\ref{fig:red_chi2_4}), a \textbf{run by run alignment} is required for the NA64 experiment to maximize the positional resolution of the tracking detectors. This in turn will make the beam momentum determination more precise which is a high priority for NA64. \textbf{Millepede} is one of the best available tools, is now compatible with the NA64 setup and can be used for this purpose.
+Besides detecting ultra-high-energy (UHE) cosmic rays, the Pierre Auger Observatory with its large Surface Detector(SD) array offers a remarkable exposure to neutrinos above $10^17$eV. Any potential observation of such UHE$\nu_s$ will further our knowledge about the known universe. Since neutrinos are not deflected as they travel towards us at Earth they offer a direct line of sight to the sources where they were produced. They are also some of the earliest particles produced in a transient source which makes their detection an important beacon for other astronomical instruments to perform a multi-messenger observation. The Pierre AUger Observatory is constantly monitoring the sky for the presence of such UHE$\nu_s$. The idea behind the detection remains the same as previous analysis at Auger where the neutrinos are assumed to induce Extensive Air Showers (EASs) close to the ground with a large electro-magnetic component at ground ("young" showers). This strategy is only employed for horizontal showers ($\theta > 60^{\circ}$) Two new SD triggers, time-over-threshold-deconvolved (ToTd) and multiplicity of positive steps (MoPS) were installed in 2014 to further increase the detection efficiency/capability for low energy neutrino induced air showers. This thesis presents the first analysis of this improved efficiency for low energy neutrino showers in the zenith range $\theta [60^{\circ},75^\circ]$ also known as Down-going low or DG$_{Low}$ range. In this thesis the effect of the new triggers is evaluated for two types of searches, the searches for the diffused flux of UHE$\nu_s$ and search for point-like sources of UHE$\nu_s$. For both searches an overall improvement of efficiency is observed when data from new triggers is incorporated in the analysis. A short summary of the three main contributions of this thesis along with an outlook detailing potential improvements are detailed in the next sections. 
+\section*{Incorporating new triggers in the DG$_{low}$ UHE$\nu_s$ searches}
+During this thesis each facet of the DG$_{low}$ analysis was analysed. An effort was made to maximise the potential of the analysis. A blind search strategy similar to~\cite{} was followed to avoid any bias in the analysis. The first step in this process was to include the information from the new triggers in the neutrino searches. About ~7 years of recorded data was available for this task. The effect of the new triggers was first evaluated on neutrino simulations by including them in the analysis chain as described in section~\ref{}. By the inclusion of new triggers an overall increase in reconstructed events was observed as shown in fig~\ref{}. This increase was most significant for lower energy neutrinos and decreased with increase in primary energy. This was an expected consequence due to the design of the new triggers. The overall increase also allowed for further modifications to the analysis which included lowering some stringent cuts as described in ~\ref{}. For the final step of the analysis a Fisher discriminate polynomial was built and trained using the simulations(signal sample) and a small fraction of recorded data, ~20\% from the Observatory (background sample). The polynomial is built with Area over Peaks (AoPs) of the stations and a differentiation between the background and signal is performed based on a cut on the Fisher value as given in eq.~\ref{}. 
+After the fixed selection, A test sample was unblinded to catch any remaining flaws in the analysis. This proved worthwhile as a small error in the reconstruction was discovered during this process. This error was promptly corrected, and the Fisher was retrained. After this correction the rest of the blinded sample, 60\% of recorded data between the period of 1 Jan 2014 to 31 December 2012 was unblinded to search for neutrinos. No neutrino candidates were found using the analysis described in this thesis. 
 
 \subsection*{Outlook}
-Since the results from the alignment also depend on the individual detector resolution a better estimate of the resolutions for both Micromegas and GEMs might be required before a final run by run alignment is performed.
+Even though a concerted effort was made to maximize the potential of the analysis presented in this thesis certain improvements could not be implemented and are thus summarized here for future studies. The segmentation algorithm used for reconstruction of events for neutrino searches was found to be not properly tuned for the new triggers ToTd and MoPS. This resulted in new triggers being completely removed from the segmentation algorithm which is useful to decrease the effect of accidental muons which in turn affects the zenith angle estimation. A better tuned segmentation algorithm could thus further improve the neutrino search with new triggers. SOme examples of events where the segmentation algorithm could help are presented in Appendix~\ref{}. This tuning could not be explored in this thesis but could be implemented in the future. In this thesis a cut on the saturated and active PMTs was also explored but not implemented in the final analysis. A detailed study on such a cut could also be useful to increase the efficiency of the analysis. 
 
-Another global parameter which can be looked into is the forward or backward tilt of the detector. If the detector is tilted in either one of these directions it can lead to a missallocation of hits, in turn affecting track fitting since CORAL assumes the detector to be perfectly aligned. This misallocation can be fixed by varying the pitch of the detector which is the distance between the readout strips. Even though the pitch of the detector is fixed by construction, the movement simply mimics the tilt of the detector and is generally of the order of few $\mu m$. Although the expected impact is very small it is something which can be looked into more since it is already operational in Millepede. A future z positional alignment is also available and can also be looked into in the future.
+\section*{Improvements to the diffuse flux limit for UHE$\nu_s$ with new triggers}
+With no neutrino candidate detected a 90\% C.L. upper limit on the diffuse flux of UHE$\nu_s$ for the DG$_{low}$ channel was evaluated. The limit was evaluated under the assumption of a diffuse flux given by $\phi \propto E_{\nu}^-2$ with a 1:1:1 neutrino flavour ratio at earth. The integrated limit is given as:
+\begin{equation}
+    k_{90} < 6.3 x 10^{-17} GeV cm^{-2} s^{-1} sr^{-1},
+\end{equation}
+in the energy range $E_{\nu} \in [1.9 \times 10^{18} - 2.0 \times 10^{20}]$eV. The integrated limit represents the value of the normalisation of the differential flux needed to predict ~2.39 expected events. The number 2.39 was evaluated using a semi Bayesian extension of the Feldman\&Cousins treatment~\cite{} accounting for systematic uncertainties on exposure. This limit is one order stricter than the one obtained without the new triggers for the same time period. Even though this improvement is significant 
+\section*{Improvements to the point source searches for UHE$\nu_s$ with new triggers}
+Further a point sensitivity comparison was also performed to evaluate the performance of the new triggers. The methology was adopted from ~\cite{} and an energy and declination dependent exposure was evaluated for the DG$_{_low}$ range. Using the no neutrino candidate detection ansatz a 90\% C.L. upperlimit on the neutrino flux from point-like sources as a function of source declination, $\delta$ was evaluated and presented in fig.~\ref{}. This limit was also shown to improve with the inclusion of new triggers in fig.~\ref{}. The improvement though small has an impact in the overall sensitivity since the different searches(DG$_low$, DG$_high$, ES) have different FOVs. It must also be stressed that Auger is one of the constantly running experiments sensitive to Energy ranges > $10^{18}$eV thus any improvement to its sensitivity is an important step for the potential future detection of UHE$\nu_s$. 
 
-\section*{MC Reconstruction}
-The second task which was performed during this thesis is the reconstruction of the MC simulation for the 2018 setup in CORAL. This involved transforming the output of the simulation which is obtained from the collaboration to a format which is compatible with CORAL. The reconstruction is confirmed to be working. As a proof of principle the reconstructed beam momentum distribution is checked and confirmed to be reasonable. An attempt was also made to check the $A'$ reconstruction by looking at the angular distribution of its decay products. The distribution was as expected for the simulated $A'$ mass $m_{A'}$. The MC simulation is also described briefly in the thesis.
-
-\subsection*{Outlook}
-The angular dependence of the fitted beam momentum needs to be looked into further. This might add to the uncertainties during the determination of the reconstructed beam momentum. It seems to be related to the track fitting algorithm used by CORAL. Further rare dimuon events, $e^-Z\rightarrow e^-Z\gamma;\gamma\rightarrow \mu^{+} \mu^{-} $ can be used to estimate the efficiency of the MC reconstruction in CORAL. Such events could not be observed during this thesis since the current MC sample which was reconstructed is too small. Bigger samples of simulation already exist and can be processed in the future. Even though the reconstruction was done for the visible mode setup, it is also functional for the invisible mode since all of the detectors implemented are the same except for the WCAL. Hence, MC reconstruction for the invisible mode can be easily done by just plugging in the setup specific detectors table. The results of this thesis help further the goal of performing a full physics $A'$ analysis in CORAL in the future.
 
 
 %%% Local Variables:
